--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
     "build:server": "cross-env NODE_ENV=production webpack --config webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "vue": "^2.4.4",
     "vue-server-renderer": "^2.5.2",
