--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.16.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "unirest": "^0.5.1",
     "vue": "^2.4.4",
     "vue-server-renderer": "^2.5.2",
     "vuetify": "^0.16.3"
