--- a/app/package.json
+++ b/app/package.json
@@ -6,16 +6,17 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "postinstall": "npm install express",
+    "start": "./node_modules/webpack/bin/webpack.js -p --progress && node server.js"
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "cors": "^2.8.4",
     "express": "^4.16.2",
-    "unirest": "^0.5.1",
     "vue": "^2.4.4",
     "vue-server-renderer": "^2.5.2",
-    "vuetify": "^0.16.3"
+    "vuetify": "^0.16.3",
+    "webpack": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -30,8 +31,6 @@
     "stylus-loader": "^3.0.1",
     "vue-loader": "^13.0.5",
     "vue-ssr-webpack-plugin": "^3.0.0",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "vue-template-compiler": "^2.4.4"
   }
 }
